--- a/styles.css
+++ b/styles.css
@@ -135,5 +135,9 @@
 @media screen and (max-width: 526px) {
     .cart{
         min-width: 300px;
+        border-radius: 0 0 20px 20px;
+    }
+    .products{
+        border-radius: 20px 20px 0 0;
     }
 }
