--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,12 @@
     justify-content: space-between;
     align-items: center;
 }
+.price{
+    color: rgb(5, 88, 43);
+}
+.productName{
+    color: crimson;
+}
 .products h2{
     color: rgb(233, 169, 74);
 }
@@ -58,25 +64,29 @@
     color: white;
     font-weight: 700;
     border-radius: 20px;
-    width: 80px;
-    padding: 2px 5px;
+    width: 100px;
+    /* padding: 2px 0; */
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 .add, .remove{
     cursor: pointer;
-    font-size: 1.1rem;
-    color: blue;
-    background-color: bisque;
+    font-size: 1.3rem;
+    color: rgb(0, 0, 58);
+    height: 100%;
+    width: 30px;
+    /* background-color: rgb(7, 44, 51); */
+    background: transparent;
+    /* border: none; */
     
 
 }
 .add{
-    border-radius: 0 3px 3px 0;
+    border-radius: 0 50px 50px 0;
 }
 .remove{
-    border-radius: 3px 0 0 3px;
+    border-radius: 50px 0 0 50px;
 }
 .add:hover, .remove:hover{
     transform: scale(1.12);
