--- a/styles.css
+++ b/styles.css
@@ -76,11 +76,7 @@
     color: rgb(0, 0, 58);
     height: 100%;
     width: 30px;
-    /* background-color: rgb(7, 44, 51); */
     background: transparent;
-    /* border: none; */
-    
-
 }
 .add{
     border-radius: 0 50px 50px 0;
@@ -130,6 +126,19 @@
 .last{
     margin-top: auto;
     visibility: hidden;
+    background-color: rgb(156, 212, 25);
+}
+.first{
+    background-color: rgb(4, 209, 209);
+    color: rgb(190, 107, 5);
+}
+.second{
+    background-color:#f7baba ;
+    color: blueviolet;
+}
+.third{
+    background-color: rgb(139, 0, 116);
+    color: rgb(199, 233, 7);
 }
 .last h4{
     font-size: 1.5rem;
